[tool.poetry]
name = "apilytics-geoip"
version = "1.0.0"
description = "Apilytics GeoIP"
authors = ["Apilytics <hello@apilytics.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.0"
maxminddb = "2.2.0"
requests = "2.27.1"
uvicorn = "0.17.5"

[tool.poetry.dev-dependencies]
black = "22.1.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.931"
types-requests = "2.27.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_glob = [
    "*/.venv/*",
]

[tool.mypy]
strict = true
local_partial_types = true
warn_unreachable = true
pretty = true
show_error_codes = true
show_error_context = true
show_traceback = true
